feat: add favorite functionality for images with overlay and toggle button